# Nexus-OS

./: .dockerignore  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .prettierignore  AGENT.md  AGENTS.md  Anime I have Watched.xlsx  Books.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  Scary movies i have watched.md  bandit.yaml  check.sh  database.sql  docker-compose.yml  package.json  pyproject.toml  render.yaml  vercel.json
.antigravitycli/: 73015f2d-2dbd-41e2-956c-e98748e37b57.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  __init__.py  app.py  audit_logger.py  auth.py  auth_controller.py  chat_controller.py  config.py  controllers.py  data_protection.py  email_controller.py  email_poller.py  email_schemas.py  email_service.py  health.py  logging_config.py  notes_controller.py  notes_schemas.py  notes_service.py  oauth_controller.py  observability.py  rate_limit.py  schemas.py  security.py  services.py  tasks_controller.py  tasks_schemas.py  tasks_service.py
docs/: api-reference.md  architecture.md  design-guidelines.md  operations.md  usage-examples.md
docs/plans/: 2026-03-15-auth-sliding-panels-design.md  (+5 more)
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.setup.js
loadtests/: locustfile.py
scripts/: check.sh
supabase/: config.toml  seed.sql
tests/: conftest.py  test_auth_controller.py  test_auth_logic.py  test_chat_controller.py  test_config.py  test_controllers.py  test_data_privacy.py  test_data_protection.py  test_email_config.py  test_email_controller.py  test_email_poller.py  test_email_schemas.py  test_email_service.py  test_notes_controller.py  test_notes_encryption.py  test_notes_schemas.py  test_notes_service.py  test_oauth_controller.py  test_rate_limit.py  test_schemas.py  test_services.py  test_tasks_controller.py  test_tasks_schemas.py  test_tasks_service.py
worker/: index.js  package-lock.json  package.json  wrangler.toml
(+204 files in other folders)
