[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-archive"
version = "0.1.0"
description = "Personal anime, movie, and book archive with a Litestar API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Raoof" }
]
dependencies = [
  "litestar>=2.17.0",
  "pydantic>=2.11.0",
  "pyjwt>=2.10.0",
  "python-dotenv>=1.0.1",
  "supabase>=2.15.3",
  "google-genai>=1.22.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.5",
  "ruff>=0.11.13"
]

[tool.setuptools]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
