[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-archive"
version = "0.3.0"
description = "Personal cyberpunk media archive with AI recommendations and a Litestar API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Raoof" }]
dependencies = [
  "cryptography>=45.0.0",
  "email-validator>=2.2.0",
  "google-genai>=1.22.0",
  "litestar>=2.17.0",
  "pydantic>=2.11.0",
  "pyjwt>=2.10.0",
  "python-dotenv>=1.0.1",
  "redis>=6.0.0",
  "sentry-sdk>=2.27.0",
  "supabase>=2.15.3",
  "tiktoken>=0.9.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.8.3",
  "httpx>=0.28.1",
  "locust>=2.37.10",
  "pip-audit>=2.8.0",
  "pytest>=8.3.5",
  "ruff>=0.11.13",
]

[tool.setuptools]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
